--- a/backend/src/main/webapp/app/views/payment/main.html
+++ b/backend/src/main/webapp/app/views/payment/main.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="row">
 		<div class="col-md-12">
-			<h1 class="page-header">{{ (isShowPage || isDetailPage)? 'Payment Result' : 'นำเข้า Payment' }}</h1>
+			<h1 class="page-header">{{ (isShowPage || isDetailPage)? 'ข้อมูล Payment' : 'นำเข้า Payment' }}</h1>
 		</div>
 	</div>
 	
