--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="row">
 		<div class="col-md-12">
-			<h1 class="page-header">รายละเอียดงาน</h1>
+			<h1 class="page-header">จัดการข้อมูลงาน</h1>
 			<!-- <div class="col-md-6" style="position: absolute; right: 0px; top: 15px;">
 				 <div class="col-md-12 well well-sm">
 				 	<div class="col-md-12">
