--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -43,7 +43,7 @@
 			<button type="submit" class="btn btn-outline btn-primary btn-lg" ng-disabled="addUserForm.$invalid">{{ persisBtn }}</button>
 		</div>
 	</div>
-	<div class="col-md-6" style="margin-top: 15px; color: #337AB7;">
+	<div class="col-md-6" style="margin-top: 15px; color: #337AB7;" ng-show="group0">
 		<div class="panel panel-default">
 			  <div class="panel-heading">
 			      Payment Update Setting
