--- a/backend/src/main/webapp/app/views/pay_online_checking/main.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/main.html
@@ -50,16 +50,16 @@
 												</tr>
 											<thead>
 											<tbody>
-												<tr ng-repeat="data in checkList_1  | orderBy:'-sys_updatedDateTime'" style="color: #337AB7; cursor: pointer;" ng-click="goToTask(data.taskDetailFull['_id'])">
+												<tr ng-repeat="data in checkList_1  | orderBy:'-sys_updatedDateTime'" style="color: #337AB7; cursor: pointer;" ng-click="goToTask(data['_id'])">
 													<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 													<td style="vertical-align: middle; text-align: center;">
 														{{ data.sys_updatedDateTime | date:gb_timeFormat }}
 													</td>
 													<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 														{{ 
-														   h.dataType == 'date' ? (data.taskDetailFull[h.columnName] | date:gb_dateFormat) : 
-														   h.dataType == 'sys_owner' ? data.taskDetailFull[h.columnName][0].showname : 
-														   h.dataType == 'num' ? (data.taskDetailFull[h.columnName] | number:2) : data.taskDetailFull[h.columnName] 
+														   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateFormat) : 
+														   h.dataType == 'sys_owner' ? data[h.columnName][0].showname : 
+														   h.dataType == 'num' ? (data[h.columnName] | number:2) : data[h.columnName] 
 														}}
 													</td>
 												</tr>
@@ -91,16 +91,16 @@
 												</tr>
 											<thead>
 											<tbody>
-												<tr ng-repeat="data in checkList_2" style="color: #337AB7; cursor: pointer;" ng-click="goToTask(data.taskDetailFull['_id'])">
+												<tr ng-repeat="data in checkList_2" style="color: #337AB7; cursor: pointer;" ng-click="goToTask(data['_id'])">
 													<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 													<td style="vertical-align: middle; text-align: center;">
 														{{ data.sys_updatedDateTime | date:gb_timeFormat }}
 													</td>
 													<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 														{{ 
-														   h.dataType == 'date' ? (data.taskDetailFull[h.columnName] | date:gb_dateFormat) : 
-														   h.dataType == 'sys_owner' ? data.taskDetailFull[h.columnName][0].showname : 
-														   h.dataType == 'num' ? (data.taskDetailFull[h.columnName] | number:2) : data.taskDetailFull[h.columnName] 
+														   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateFormat) : 
+														   h.dataType == 'sys_owner' ? data[h.columnName][0].showname : 
+														   h.dataType == 'num' ? (data[h.columnName] | number:2) : data[h.columnName] 
 														}}
 													</td>
 												</tr>
