--- a/backend/src/main/webapp/app/views/pay_online_checking/main.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/main.html
@@ -53,7 +53,7 @@
 												<tr ng-repeat="data in checkList_1  | orderBy:'-sys_updatedDateTime'" style="color: #337AB7; cursor: pointer;" ng-click="goToTask(data['_id'])">
 													<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 													<td style="vertical-align: middle; text-align: center;">
-														{{ data.sys_updatedDateTime | date:gb_timeFormat }}
+														{{ data.sys_updatedDateTime | date:gb_dateTimeFormat }}
 													</td>
 													<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 														{{ 
@@ -94,7 +94,7 @@
 												<tr ng-repeat="data in checkList_2" style="color: #337AB7; cursor: pointer;" ng-click="goToTask(data['_id'])">
 													<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 													<td style="vertical-align: middle; text-align: center;">
-														{{ data.sys_updatedDateTime | date:gb_timeFormat }}
+														{{ data.sys_updatedDateTime | date:gb_dateTimeFormat }}
 													</td>
 													<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 														{{ 
