--- a/backend/src/main/webapp/app/views/payment/detail.html
+++ b/backend/src/main/webapp/app/views/payment/detail.html
@@ -72,6 +72,9 @@
 		<thead>
 			<tr>
 				<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
+				<th style="white-space: nowrap; text-align: center; color: #337AB7; padding-left: 30px; padding-right: 30px;">
+					วันที่นำเข้า
+				</th>
 				<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center; color: #337AB7; padding-left: 30px; padding-right: 30px;">
 						{{ h.columnNameAlias || h.columnName }}
 				</th>
@@ -84,6 +87,9 @@
 			<tr ng-repeat="data in paymentDetails track by $index" ng-class="{'comm-row-selected': data.selected}" 
 			    ng-mousedown="rowSelect(data, $index, $event)" style="color: #337AB7; cursor: pointer;" ng-click="goToTask(data.taskDetail['_id'])">
 				<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
+				<td style="vertical-align: middle; white-space: nowrap; text-align: center;">
+					{{ data['sys_createdDateTime'] | date:gb_dateTimeFormat }}
+				</td>
 				<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 					{{ 
 					   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateFormat) : 
