--- a/backend/src/main/webapp/app/views/setting/main.html
+++ b/backend/src/main/webapp/app/views/setting/main.html
@@ -151,6 +151,12 @@ fieldset {
 									<a href="" class="form-control no-border" e-class="form-control" e-style="width: 100%; margin-left: 15px;" buttons="no" onaftersave="update()" editable-text="tesseractPath">{{ tesseractPath || 'edit' }}</a>
 								</div>
 							</div>
+							<div class="form-group">
+								<label class="control-label col-md-3" style="color: #337AB7;">wkhtmltopdf Path: </label>
+								<div class="col-md-6">
+									<a href="" class="form-control no-border" e-class="form-control" e-style="width: 100%; margin-left: 15px;" buttons="no" onaftersave="update()" editable-text="wkhtmltopdfPath">{{ wkhtmltopdfPath || 'edit' }}</a>
+								</div>
+							</div>
 						</fieldset>
 						
                 	</div>
