--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -25,6 +25,9 @@
 	    -webkit-appearance: none;
 	    margin: 0;
 	}
+	button[name='capture'].ng-hide.ng-hide-animate{
+	     display: none !important;
+	}
 </style>
 <div id="taskDetailStick" style="z-index: 10; background-color: #FFFFFF">
 <div class="row">
@@ -32,6 +35,9 @@
 		<div class="btn-group pull-left" style="margin: 0px 0 3px 0;">
 		  <button type="button" class="btn btn-primary btn-outline" style="min-width: 70px;" ng-class="{'active': group.btnActive}" ng-repeat="group in groupDatas" ng-click="changeTab(group)">{{ group.name }}</button>
 		</div>
+		
+		<button type="button" name="capture" class="btn btn-warning btn-outline" style="position: absolute;" 
+		        ng-style="isEditable ? {'right': '317px'} : {'right': '207px'}" ng-show="isKYS" ng-click="test()">Capture</button>
 		
 		<div class="panel panel-primary" style="position: absolute;" ng-style="isEditable ? {'right': '125px'} : {'right': '15px'}">
 			<div class="panel-body" style="padding: 6px;">
