--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -38,7 +38,14 @@
 			   </div>
 			   
 			   <div class="row" style="margin-top: 5px;">
-				   <div class="col-xs-12">			
+				   <div class="col-xs-12">
+				   
+				   	    <div class="form-group input-group" ng-show="workingOnProduct.productSetting.pocModule == 1">
+					  	  <span class="input-group-addon">กลุ่มงาน</span>
+					  	  <select name="column" class="form-control" ng-model="formData.kysGroup" ng-options="option.id as option.val for option in kysGroups" ng-change="searchBtn()">
+							<option value="">--ทั้งหมด--</option>
+				  		  </select>
+					    </div>	
 				   		
 				   		<div class="form-group input-group">
 							<span class="input-group-addon">Code</span>
