--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -68,7 +68,7 @@
 									  </div>
 									  
 									  
-									  <div class="pull-right" ng-show="group2">
+									  <div class="pull-right" ng-show="group2 || group5">
 									  
 									  	  <!-- Notice -->
 									  	  <!-- <span class="pull-right" ng-show="isDisableNoticePrint && group1">
