--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -71,7 +71,7 @@
 					{{ data['link_' + list.fieldName][0].code || data['link_' + list.fieldName][0].meaning }}
 				</td>
 				
-				<td style="white-space: nowrap;" ng-hide="askModalObj.isOldTrace">{{ data.createdByName }}</td>
+				<td style="white-space: nowrap;" ng-hide="askModalObj.isOldTrace">{{ createdByLog == 1 ? data.taskDetail.sys_owner : data.createdByName }}</td>
 				<td ng-click="askModalObj.deleteTraceDummy($event)" style="cursor: default; text-align: center;  white-space: nowrap;" ng-hide="askModalObj.isOldTrace">
 					<i class="fa fa-times fa-lg user-action-icon-danger" title="ลบ" ng-click="askModalObj.deleteTrace($event, data._id)" ng-show="isEditable">&nbsp;</i>
 					<i class="fa fa-home fa-lg user-action-icon-primary" title="เพิ่มที่อยู่" ng-click="askModalObj.addAddr($event, data._id)"></i>
