--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -28,6 +28,9 @@
 	button[name='capture'].ng-hide.ng-hide-animate{
 	     display: none !important;
 	}
+	#detail .label {
+		white-space: normal;
+	}
 </style>
 <div id="taskDetailStick" style="z-index: 10; background-color: #FFFFFF">
 <div class="row">
@@ -63,7 +66,7 @@
 </div>	
 
 <div class="row" ng-hide="isKYS">
-	<div class="col-xs-12">
+	<div id="detail" class="col-xs-12">
 		<div style="background-color: #356190; margin-bottom: 1px; height: 238px; overflow-y: auto;" class="comm-rcorners-1" ng-repeat="detail in taskDetail">
 			<div ng-repeat="f in fieldName" class="col-xs-3" style="font-size: 13px; padding: 0; color: #E1E2E3;">
 				<div class="col-xs-5" style="text-align: right; margin: 0; min-height: 38px; border-top: 1px solid #234E7C; background-color: #264F7A; word-wrap: break-word;">
