--- a/backend/src/main/webapp/app/views/tools/main.html
+++ b/backend/src/main/webapp/app/views/tools/main.html
@@ -28,11 +28,15 @@
 	        
 					        <tools-menu comments="Excel to Text" colour="red" type="random" 
 					        			goto="dashboard.tools.fileConvert({type: 1, desc: 'Excel to Text'})" 
-					        			desc="แปลง excel file เป็น text file"></tools-menu>
+					        			desc="Excel to Text"></tools-menu>
 					        			
-					        <tools-menu comments="Document to Image" colour="red" type="random" 
+					        <tools-menu comments="Document to Image" colour="yellow" type="random" 
 					        			goto="dashboard.tools.fileConvert({type: 2, desc: 'Document to Image'})" 
-					        			desc="แปลงไฟล์เอกสารเป็นรูปภาพ"></tools-menu>
+					        			desc="Document to Image"></tools-menu>
+					        			
+		        			<tools-menu comments="Web Report" colour="green" type="file-excel-o" 
+					        			goto="dashboard.tools.fileConvert({type: 3, desc: 'Web to Excel'})" 
+					        			desc="ดึงข้อมูลจากเว็บไซต์"></tools-menu>
 					
 					    </div>
                 	</div>
