--- a/backend/src/main/webapp/app/views/tools/fileConvert.html
+++ b/backend/src/main/webapp/app/views/tools/fileConvert.html
@@ -1,3 +1,31 @@
+<style>
+.input-group-addon.primary {
+    color: rgb(255, 255, 255);
+    background-color: rgb(50, 118, 177);
+    border-color: rgb(40, 94, 142);
+}
+.input-group-addon.success {
+    color: rgb(255, 255, 255);
+    background-color: rgb(92, 184, 92);
+    border-color: rgb(76, 174, 76);
+}
+.input-group-addon.info {
+    color: rgb(255, 255, 255);
+    background-color: rgb(57, 179, 215);
+    border-color: rgb(38, 154, 188);
+}
+.input-group-addon.warning {
+    color: rgb(255, 255, 255);
+    background-color: rgb(240, 173, 78);
+    border-color: rgb(238, 162, 54);
+}
+.input-group-addon.danger {
+    color: rgb(255, 255, 255);
+    background-color: rgb(217, 83, 79);
+    border-color: rgb(212, 63, 58);
+}
+</style>
+
 <div class="panel panel-info" style="margin: 0;">
 	<div class="panel-heading" nv-file-drop="" uploader="uploader">
 
@@ -50,13 +78,17 @@
            <div class="row">
 	            <div class="col-md-12">
 	            	<div class="form-inline pull-right">
-		            	<div class="form-group input-group" ng-show="isEncodingShow">
-						  	<span class="input-group-addon">Splitter</span>
+		            	<div class="form-group input-group" ng-show="splitters">
+						  	<span class="input-group-addon info">Splitter</span>
 						  	<select name="splitter" class="form-control" ng-model="splitter" ng-options="option.code as option.name for option in splitters"></select>
 				  		</div>
-		            	<div class="form-group input-group" ng-show="isEncodingShow">
-						  	<span class="input-group-addon">Encoding</span>
+		            	<div class="form-group input-group" ng-show="encodings">
+						  	<span class="input-group-addon info">Encoding</span>
 						  	<select name="encoding" class="form-control" ng-model="encoding" ng-options="option.code as option.name for option in encodings"></select>
+				  		</div>
+				  		<div class="form-group input-group" ng-show="sites">
+						  	<span class="input-group-addon info">เว็บไซต์</span>
+						  	<select name="splitter" class="form-control" ng-model="site" ng-options="option.code as option.name for option in sites"></select>
 				  		</div>
 	            		<input type="file" class="form-control" nv-file-select="" uploader="uploader" />	  
 				  	</div>
