[DMS-6] Improvement: Add appoint-amount after appoint-date on taskList page. 2

--- a/backend/src/main/webapp/app/views/working/tab_tasklist.html
+++ b/backend/src/main/webapp/app/views/working/tab_tasklist.html
@@ -104,7 +104,7 @@
 					</a>
 				</th>
 				<th style="white-space: nowrap; text-align: center;">
-					<a href="" ng-click="columnOrder('sys_appointAmount')" style="padding-left: 30px; padding-right: 30px; position: relative;">
+					<a href="" ng-click="columnOrder('sys_appointAmount', 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative; color: black;">
 						ยอดนัดชำระ&nbsp;
 						<i ng-class="{'comm-order-active': ('sys_appointAmount' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
 						<i ng-class="{'comm-order-active': ('sys_appointAmount' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
