--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -62,12 +62,12 @@
 		</button>
 		
 		<button type="button" name="capture" class="btn btn-success pull-right" ng-disabled="loanType == 'F201'"
-				ng-show="isKYS && !kysIsError && loanType" ng-click="goToKYS()" style="margin-left: 3px;">
+				ng-show="isKYS && !kysIsError && loanType" ng-click="goToKYS('F201')" style="margin-left: 3px;">
 			กรอ
 		</button>
 		
 		<button type="button" name="capture" class="btn btn-success pull-right" ng-disabled="loanType == 'F101'"
-				ng-show="isKYS && !kysIsError && loanType" ng-click="goToKYS()" >
+				ng-show="isKYS && !kysIsError && loanType" ng-click="goToKYS('F101')" >
 			กยศ
 		</button>
 		
