--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -45,6 +45,13 @@
 					  	  <select name="column" class="form-control" ng-model="formData.kysGroup" ng-options="option.id as option.val for option in kysGroups" ng-change="searchBtn()">
 							<option value="">--ทั้งหมด--</option>
 				  		  </select>
+					    </div>
+					    
+					    <div class="form-group input-group" ng-show="workingOnProduct.productSetting.pocModule == 1">
+					  	  <span class="input-group-addon">ประเภทสัญญา</span>
+					  	  <select name="column" class="form-control" ng-model="formData.kysLoanType" ng-options="option.code as option.val for option in kysLoanTypes" ng-change="searchBtn()">
+							<option value="">--ทั้งหมด--</option>
+				  		  </select>
 					    </div>	
 				   		
 				   		<div class="form-group input-group">
