--- a/backend/src/main/webapp/app/views/working/tab_cal.html
+++ b/backend/src/main/webapp/app/views/working/tab_cal.html
@@ -10,25 +10,39 @@
 				            	{{ balanceHeader.columnNameAlias || balanceHeader.columnName }} : <b>{{ taskDetailPerm['OS LEGAL/LOSS'] | number:2 }}</b>
 				            	
 				            	<div ng-repeat="op in operators track by $index">
-				            		<div class="form-group input-group col-xs-3" style="margin: 3px; width: 150px;">
-									   	<span class="input-group-addon" style="width: 40px;"><b>{{ op.operator }}</b></span>
-									    <input type="number" class="form-control input-sm" dir="rtl" ng-model="op.val" ng-keyup="observeOperator()">
+				            		<div class="form-group input-group col-xs-3" style="margin: 3px 0 3px 0; width: 200px;">
+									   	<span class="input-group-addon" style="width: 40px;"><b>{{ op.sign }}</b></span>
+									    <input type="number" class="form-control input-sm" dir="rtl" ng-model="op.val" ng-keyup="observeOperator()" set-focus="$last">
 									    <span class="input-group-addon"><i class="fa fa-times" style="color: red; cursor: pointer;" ng-click="deleteOperator($index)"></i></span>
 									</div>
 				            	</div>
 				            	
-				            	{{ result }}
+				            	<div ng-show="operators.length > 0" style="color: red;">
+				            		<u>{{ balanceHeader.columnNameAlias || balanceHeader.columnName }}</u> : <b>{{ finalBalance | number:2 }}</b>
+				            	</div>
+				            	
+				            	
+				            	<div class="form-group input-group col-xs-3" style="margin-top: 15px; width: 200px;">
+								   	<span class="input-group-addon" style="width: 40px;">ยอดชำระ</span>
+								    <input type="number" class="form-control input-sm" dir="rtl">
+								</div>
+								<div class="form-group input-group col-xs-3" style="margin-top: 15px; width: 200px;">
+								   	<span class="input-group-addon" style="width: 40px;">คิดเป็น %</span>
+								    <span type="number" class="form-control input-sm" dir="rtl">50</span>
+								    <span class="input-group-addon" style="width: 40px;">%</span>
+								</div>
+									
 				            	
 				        	</div>
 					        <div class="col-xs-3">
 					        	<div class="pull-right row">
 					        		<div>
-							            <img class="img-thumbnail" width="35" ng-src="{{ plusIcon }}" title="บวก" style="cursor: pointer;" ng-click="addOperator('+')">
-							            <img class="img-thumbnail" width="35" ng-src="{{ multiplyIcon }}" title="คูณ" style="cursor: pointer;" ng-click="addOperator('×')">
+							            <img class="img-thumbnail" width="35" ng-src="{{ plusIcon }}" title="บวก" style="cursor: pointer;" ng-click="addOperator('+', '+')">
+							            <img class="img-thumbnail" width="35" ng-src="{{ multiplyIcon }}" title="คูณ" style="cursor: pointer;" ng-click="addOperator('*', '×')">
 					        		</div>
 					        		<div style="margin-top: 3px;">
-							            <img class="img-thumbnail" width="35" ng-src="{{ minusIcon }}" title="ลบ" style="cursor: pointer;" ng-click="addOperator('-')">
-							            <img class="img-thumbnail" width="35" ng-src="{{ divideIcon }}" title="หาร" style="cursor: pointer;" ng-click="addOperator('÷')">
+							            <img class="img-thumbnail" width="35" ng-src="{{ minusIcon }}" title="ลบ" style="cursor: pointer;" ng-click="addOperator('-', '-')">
+							            <img class="img-thumbnail" width="35" ng-src="{{ divideIcon }}" title="หาร" style="cursor: pointer;" ng-click="addOperator('/', '÷')">
 					        		</div>
 					        	</div>
 					        </div>
